test/exits/sungeun/exitWithNoParens.good
exitWithNoParens.chpl:2: syntax error: syntax error near '1'
